# sussexmews

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yaml  format-lint.yaml  test.yaml
homelab/airflow/: Dockerfile  docker-compose.yaml
homelab/airflow-service/: README.md  docker-compose.yaml  pyproject.toml
homelab/airflow-service/src/airflow_service/: __init__.py
homelab/airflow-service/src/airflow_service/dags/: bills.py  bills_notifier.py  dashboard_shutoff.py  update_kitchen_dashboard.py
homelab/airflow-service/src/airflow_service/data/bills-notifier/: email.html
homelab/airflow/dags/: bash.py  bills.py  bills_notifier.py
homelab/api/: Dockerfile  docker-compose.yaml  pyproject.toml
homelab/api/app/: main.py
homelab/api/app/dependencies/: database.py
homelab/api/app/lib/: ssh.py
homelab/api/app/models/: kitchen_dashboard.py  todo.py
homelab/api/app/routers/: __init__.py  kitchen_dashboard.py  todo.py
homelab/bills-dashboard/: docker-compose.yaml
homelab/dashboard/: docker-compose.yaml  nginx.conf
homelab/dashboard/html/: index.html  move.html
homelab/dashboard/www/: index.html
homelab/dashboard/www/css/: style.css
homelab/db/: docker-compose.yaml
homelab/document-store/: docker-compose.yaml
homelab/homebridge/: docker-compose.yaml
homelab/jellyfin/: docker-compose.yaml
homelab/nginx/: docker-compose.yaml
homelab/nginx/html/: index.html
homelab/pihole/: docker-compose.yaml
homelab/portainer/: docker-compose.yaml
homelab/pypi/: docker-compose.yaml
homelab/rail-dashboard/: docker-compose.yaml  justfile  nginx.conf
homelab/rail-dashboard/src/css/: style.css
homelab/rail-dashboard/src/html/: index.html  page.html
homelab/rail-dashboard/src/js/: index.js
homelab/rail-dashboard/src/ts/: tsconfig.json
homelab/rail-dashboard/src/ts/src/: index.ts
homelab/registry/: docker-compose.yaml
homelab/runners/: Dockerfile  docker-compose.yaml  start.sh
homelab/speedtest-tracker/: docker-compose.yaml
homelab/tgtg/: docker-compose.yaml
homelab/todo/: index.html  package-lock.json
homelab/todo/src/: App.css  App.tsx  Dashboard.tsx
homelab/traefik/: docker-compose.yaml
homelab/traefik/config/: traefik.yaml  traefik_dynamic.yaml
homelab/traefik/terraform/env/dev/euw2/: main.tf
homelab/traefik/terraform/resources/: dns_wildcard.tf  iam.tf
homelab/vpn/: docker-compose.yaml
lib/db/: Makefile  alembic.ini  pyproject.toml
lib/db/alembic/: env.py
lib/db/alembic/versions/: 2a3875c817b3_test.py  46224579b3c0_rename_table.py  85c6990a99e8_todo_table.py  d267bceacfbc_public_schema_init.py
lib/db/src/db/: __init__.py  alembic.ini  engine.py  session.py
lib/db/src/db/alembic/versions/: 1a9d7f1ca74c_create_strava_schema.py  54e58a8f4ea6_create_test_tables.py
lib/db/src/db/models/: __init__.py  utils.py
lib/db/src/db/models/public/: __init__.py  tables.py  test2.py
lib/db/src/db/models/strava/: __init__.py  base.py  test.py
lib/db/src/db/models/todo/: __init__.py  base.py  tables.py
provision/: cdk.json  pyproject.toml
provision/src/provision/: __init__.py  main.py
provision/src/provision/stacks/: __init__.py  traefik.py
src/sussexmews/: __init__.py
website/: Makefile
website/src/: error.html  index.html
website/terraform/env/dev/euw2/: locals.tf  main.tf
website/terraform/env/dev/use1/: acm.tf  main.tf
website/terraform/env/dev/use1/certificate_resources/: acm.tf  dns_records.tf  hosted_zone.tf
website/terraform/resources/: cloudfront.tf  dns_records.tf  iam_policy.tf  providers.tf  route53.tf  s3.tf
