[project]
name = "sussexmews"
version = "1.0.1"
description = "Sussex Mews shit"
readme = "README.md"
authors = [
    { name = "bishwill", email = "will.bishop9427@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "provision",
    "airflow-service",
]

[project.scripts]
sussexmews = "sussexmews:main"
format = "sussexmews:format"
lint = "sussexmews:lint"
lintfix = "sussexmews:lintfix"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv.workspace]
members = ["provision", "homelab/airflow-service"]

[tool.uv.sources]
provision = { workspace = true }
airflow-service = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/sussexmews"]

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]

[tool.ruff]
line-length = 170