[project]
name = "provision"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bishwill", email = "will.bishop9427@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib==2.179.0",
    "constructs>=10.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/provision"]

[project.scripts]
hello = "provision:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.7",
]
