[project]
name = "provision"
version = "0.1.0"
description = "Sussex Mews AWS Infrastructure CDK project"
readme = "README.md"
authors = [
    { name = "bishwill", email = "will.bishop9427@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib==2.179.0",
    "constructs>=10.4.2",
]

[project.scripts]
provision = "provision:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
