[project]
name = "airflow-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bishwill", email = "will.bishop9427@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["apache-airflow==2.10.4"]

[project.scripts]
airflow-service = "airflow_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
