[project]
name = "airflow-service"
version = "0.2.0"
description = "Apache Airflow Instance"
readme = "README.md"
authors = [
    { name = "bishwill", email = "will.bishop9427@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["apache-airflow==2.10.4"]

[project.scripts]
airflow-service = "airflow_service:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
