[project]
name = "db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bishwill", email = "will.bishop9427@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "psycopg2>=2.9.10",
]

[project.scripts]
db = "db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
