[project]
name = "db"
version = "0.1.0"
description = "DB Migrations and ORM models"
readme = "README.md"
authors = [
    { name = "bishwill", email = "will.bishop9427@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic==1.13.3",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
db = "db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]
