[project]
name = "db"
version = "1.0.0"
description = "DB Migrations and ORM models"
readme = "README.md"
authors = [
    { name = "bishwill", email = "will.bishop9427@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>2.0.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "alembic>=1.13.3",
]

[project.scripts]
db = "db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "sussexmews"
url = "https://pypi.sussexmews.co.uk"
publish-url = "https://pypi.sussexmews.co.uk"
explicit = true